syntax = "proto3";

package proto.music_service.info.v1;

option go_package = "github.com/VrMolodyakov/vgm/music/app/gen/go/proto/music_service/info/v1;pb_music_album";


message Info {
    string album_info_id = 1;
    string catalog_number = 2;
    optional string image_src = 3;
    optional string barcode = 4;
    uint32 release_date = 5;
    float price = 6;
    uint32 currency_code = 7;
    string media_format = 8;
    string classification = 9;
    string publisher = 10;
}

